Fix spacing

--- a/careers/blocks/columns/columns.css
+++ b/careers/blocks/columns/columns.css
@@ -16,6 +16,7 @@
 .columns.long-card>div {
   border: 1px solid var(--static-color-light-gray);
   box-shadow: 0 2px 4px 0 rgb(0 0 0 / 10%);
+  align-items: unset;
 }
 
 .columns.long-card h2,
@@ -44,7 +45,7 @@
 
 .columns.stretch-start.long-card>div>div:first-of-type,
 .columns.stretch-end.long-card>div>div:last-of-type {
-  padding: 10px;
+  padding: 16px 10px 10px 10px;
 }
 
 .columns.intro>div>div {
